--- a/Fake_Risk_v1.ipynb
+++ b/Fake_Risk_v1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "19edad42",
+   "id": "62607e46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b6a95f62",
+   "id": "2d8c38b8",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9fe6c778",
+   "id": "aecb0199",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "e92a505b",
+   "id": "ef6f40c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "fb601d73",
+   "id": "a3a3f07f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "2de24248",
+   "id": "7fafbd8d",
    "metadata": {},
    "outputs": [
     {
@@ -157,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "6be24239",
+   "execution_count": 133,
+   "id": "174f11d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,8 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "ea5424a6",
+   "execution_count": 158,
+   "id": "fdfcf7a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,28 +215,24 @@
     "    def getAlias(ali,listobj):\n",
     "        for i in listobj:\n",
     "            if ali == i.alias:\n",
-    "                return i\n",
-    "            else:\n",
-    "                print('Non existant alias')\n",
-    "                return False\n",
+    "                return i        \n",
+    "\n",
+    "        print('Non existant alias')\n",
+    "        return False\n",
     "    \n",
     "    def checkWorld(game):\n",
     "        for i in game.world:\n",
-    "            \n",
-    "        \n",
-    "        \n",
-    "            \n",
-    "            \n",
-    "        \n",
-    "        \n",
+    "            print(f'the country {i.name} is controlled by {i.controlled_by}')\n",
+    "            print(f'with a total of {i.troopsRegion}')\n",
+    "               \n",
     "        \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "deefa17f",
+   "execution_count": 148,
+   "id": "7852e758",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,37 +243,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "44008d5b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Regions.adjacent(NorthAmerica,NorthAfrica)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "adf8bc33",
+   "execution_count": 189,
+   "id": "c4bbcaad",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Troops:\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        self.power\n",
-    "        self.owner\n",
+    "    def __init__(self,power,owner):\n",
+    "        self.power = power\n",
+    "        self.owner = owner\n",
     "    \n",
     "    def attack(reg1, reg2):\n",
     "        if not adjacent(reg1,reg2):\n",
@@ -290,32 +265,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "52c282fd",
+   "execution_count": 198,
+   "id": "d3390e77",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class HumanPlayer:\n",
+    "class Player:\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        self.name\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "        self.currentSel = 0\n",
     "        \n",
-    "    def select():\n",
+    "    def select(self):\n",
+    "        # list just for testing! DELETE IT ON THE FINAL CODE!\n",
+    "        testList = [NorthAfrica,CentralAmerica,NorthAmerica]\n",
+    "   \n",
     "        while True:\n",
     "            selection = input('select a country(by alias) where your troops ara stationed')\n",
-    "            if Regions.getAlias(selection,listobj) != False:\n",
-    "                regSelected = Regions.getAlias(selection,listobj)\n",
-    "                break\n",
+    "            if Regions.getAlias(selection,testList) != False:\n",
+    "                regSelected = Regions.getAlias(selection,testList)\n",
+    "                if regSelected.isControlled() != self.name:\n",
+    "                    print('you do not control the selected country')\n",
+    "                elif regSelected.howManyTroops() == 0:\n",
+    "                    print('you do not have troops on the selected country')\n",
+    "                else:\n",
+    "                    self.currentSel = Troops(regSelected.howManyTroops(),regSelected.isControlled())\n",
+    "                    print(f'you selected {self.currentSel.power} troops on {regSelected.name}')\n",
+    "                    break \n",
     "            \n",
-    "        if regSelected.isControlled == self.name:\n",
     "            \n",
+    "    \n",
+    "                    \n",
     "            \n",
     "        \n",
-    "        \n",
-    "        \n",
+    "    \n",
     "        \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "ed323ea4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HumanPlayer = Player('Gerard')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "6514312f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NorthAfrica.controlled_by = 'Gerard'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "a498b00d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NorthAfrica.troopsRegion = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "dab8f064",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Gerard'"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NorthAfrica.isControlled()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "ad17e4f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NorthAfrica.howManyTroops()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "46024422",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Gerard'"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HumanPlayer.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "id": "720768d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "select a country(by alias) where your troops ara stationedCA\n",
+      "you do not control the selected country\n",
+      "select a country(by alias) where your troops ara stationedNAf\n",
+      "you selected 2 troops on NorthAfrica\n"
+     ]
+    }
+   ],
+   "source": [
+    "HumanPlayer.select()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "9d950418",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HumanPlayer.currentSel.power"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2684b88d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
