--- a/Fake_Risk_v1.ipynb
+++ b/Fake_Risk_v1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "62607e46",
+   "id": "f9ff8cac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2d8c38b8",
+   "id": "dae71a96",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "aecb0199",
+   "id": "b6247a2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "ef6f40c2",
+   "id": "2dff4d91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a3a3f07f",
+   "id": "e081eee9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "7fafbd8d",
+   "id": "2ef096b9",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "174f11d4",
+   "id": "694b314c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "fdfcf7a7",
+   "id": "fcbb2bfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "7852e758",
+   "id": "c7c2e243",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,17 +243,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "id": "c4bbcaad",
+   "execution_count": 228,
+   "id": "60f63f7e",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Troops:\n",
     "    \n",
-    "    def __init__(self,power,owner):\n",
+    "    def __init__(self,power,owner, location=None):\n",
     "        self.power = power\n",
     "        self.owner = owner\n",
+    "        self.location = location\n",
     "    \n",
+    "    # is this method necessary?\n",
     "    def attack(reg1, reg2):\n",
     "        if not adjacent(reg1,reg2):\n",
     "            print('countries ara not addjacent to each other')\n",
@@ -265,8 +267,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
-   "id": "d3390e77",
+   "execution_count": 247,
+   "id": "6b8d713c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,10 +276,11 @@
     "    \n",
     "    def __init__(self,name):\n",
     "        self.name = name\n",
-    "        self.currentSel = 0\n",
+    "        self.currentSel = 0 # This is Troops\n",
+    "        self.currentTar = 0 # This is Regions\n",
     "        \n",
     "    def select(self):\n",
-    "        # list just for testing! DELETE IT ON THE FINAL CODE!\n",
+    "        # list just for testing! DELETE IT ON THE FINAL CODE! the list must be created on Risk class\n",
     "        testList = [NorthAfrica,CentralAmerica,NorthAmerica]\n",
     "   \n",
     "        while True:\n",
@@ -289,24 +292,33 @@
     "                elif regSelected.howManyTroops() == 0:\n",
     "                    print('you do not have troops on the selected country')\n",
     "                else:\n",
-    "                    self.currentSel = Troops(regSelected.howManyTroops(),regSelected.isControlled())\n",
+    "                    self.currentSel = Troops(regSelected.howManyTroops(),regSelected.isControlled(),regSelected)\n",
     "                    print(f'you selected {self.currentSel.power} troops on {regSelected.name}')\n",
-    "                    break \n",
-    "            \n",
-    "            \n",
+    "                    break\n",
     "    \n",
-    "                    \n",
-    "            \n",
-    "        \n",
-    "    \n",
-    "        \n",
-    "    "
+    "    def target(self):\n",
+    "        # list just for testing! DELETE IT ON THE FINAL CODE! the list must be created on Risk class\n",
+    "        testList = [NorthAfrica,CentralAmerica,NorthAmerica]\n",
+    "        while True:\n",
+    "            selection = input('select a country(by alias) to attack')\n",
+    "            if Regions.getAlias(selection,testList) != False:\n",
+    "                regSelected = Regions.getAlias(selection,testList)\n",
+    "                if Regions.adjacent(self.currentSel.location, regSelected) == False:\n",
+    "                    print('country out of reach (not adjacent)')\n",
+    "                elif regSelected.isControlled() == self.name:\n",
+    "                    print('you already control this country!')\n",
+    "                else:\n",
+    "                    self.currentTar = regSelected\n",
+    "                    print(f'your next attack will target {self.currentTar.name}')\n",
+    "                    break\n",
+    "                \n",
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "id": "ed323ea4",
+   "execution_count": 248,
+   "id": "e7caca00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,28 +327,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "id": "6514312f",
+   "execution_count": 249,
+   "id": "6f58912b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "NorthAfrica.controlled_by = 'Gerard'"
+    "NorthAfrica.controlled_by = 'Gerard'\n",
+    "NorthAmerica.controlled_by = 'Trump'\n",
+    "CentralAmerica.controlled_by = 'Gerard'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
-   "id": "a498b00d",
+   "execution_count": 250,
+   "id": "41a93fa1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "NorthAfrica.troopsRegion = 2"
+    "NorthAfrica.troopsRegion = 2\n",
+    "NorthAmerica.troopsRegion = 3\n",
+    "CentralAmerica.troopsRegion = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
-   "id": "dab8f064",
+   "execution_count": 251,
+   "id": "064f1618",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +361,7 @@
        "'Gerard'"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,8 +372,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
-   "id": "ad17e4f9",
+   "execution_count": 252,
+   "id": "ae6fd065",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +382,7 @@
        "2"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,8 +393,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
-   "id": "46024422",
+   "execution_count": 253,
+   "id": "df2149ac",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +403,7 @@
        "'Gerard'"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,8 +414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
-   "id": "720768d0",
+   "execution_count": 254,
+   "id": "65d18f72",
    "metadata": {},
    "outputs": [
     {
@@ -407,9 +423,7 @@
      "output_type": "stream",
      "text": [
       "select a country(by alias) where your troops ara stationedCA\n",
-      "you do not control the selected country\n",
-      "select a country(by alias) where your troops ara stationedNAf\n",
-      "you selected 2 troops on NorthAfrica\n"
+      "you selected 1 troops on CentralAmerica\n"
      ]
     }
    ],
@@ -419,29 +433,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "id": "9d950418",
+   "execution_count": 255,
+   "id": "9a40ce7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "select a country(by alias) to attackNAf\n",
+      "country out of reach (not adjacent)\n",
+      "select a country(by alias) to attackNA\n",
+      "your next attack will target NorthAmerica\n"
+     ]
+    }
+   ],
+   "source": [
+    "HumanPlayer.target()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "id": "bd3306c1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "'NorthAmerica'"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "HumanPlayer.currentSel.power"
+    "HumanPlayer.currentTar.name"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2684b88d",
+   "id": "8b477945",
    "metadata": {},
    "outputs": [],
    "source": []
