changed list of regions for a dict of regions with key=Alias

--- a/Fake_Risk_v1.ipynb
+++ b/Fake_Risk_v1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f9ff8cac",
+   "id": "a306a4d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dae71a96",
+   "id": "814a176b",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b6247a2c",
+   "id": "8be9c974",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "2dff4d91",
+   "id": "9b5eee93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "e081eee9",
+   "id": "c511c0d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "2ef096b9",
+   "id": "059cf68c",
    "metadata": {},
    "outputs": [
     {
@@ -157,19 +157,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "694b314c",
+   "execution_count": 259,
+   "id": "f936c80e",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Risk:\n",
     "    \n",
     "    def __init__(self):\n",
-    "        self.world = []\n",
+    "        self.world = {}\n",
     "    \n",
     "    def createWorld(self,listobj):\n",
     "        for i in listobj:\n",
-    "            self.world.append(i)\n",
+    "            self.world[i.alias] = i\n",
     "        \n",
     "    \n",
     "def main():\n",
@@ -186,8 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "id": "fcbb2bfc",
+   "execution_count": 305,
+   "id": "5b860f04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,8 +214,8 @@
     "        \n",
     "    def getAlias(ali,listobj):\n",
     "        for i in listobj:\n",
-    "            if ali == i.alias:\n",
-    "                return i        \n",
+    "            if ali == i:\n",
+    "                return listobj[ali]        \n",
     "\n",
     "        print('Non existant alias')\n",
     "        return False\n",
@@ -231,8 +231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "id": "c7c2e243",
+   "execution_count": 294,
+   "id": "17ad046b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,8 +243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
-   "id": "60f63f7e",
+   "execution_count": 295,
+   "id": "2db0f6f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,8 +267,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
-   "id": "6b8d713c",
+   "execution_count": 296,
+   "id": "1feaa762",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,12 +281,12 @@
     "        \n",
     "    def select(self):\n",
     "        # list just for testing! DELETE IT ON THE FINAL CODE! the list must be created on Risk class\n",
-    "        testList = [NorthAfrica,CentralAmerica,NorthAmerica]\n",
+    "        testDict = {\"NAf\": NorthAfrica, \"CA\": CentralAmerica,\"NA\":NorthAmerica}\n",
     "   \n",
     "        while True:\n",
     "            selection = input('select a country(by alias) where your troops ara stationed')\n",
-    "            if Regions.getAlias(selection,testList) != False:\n",
-    "                regSelected = Regions.getAlias(selection,testList)\n",
+    "            if Regions.getAlias(selection,testDict) != False:\n",
+    "                regSelected = Regions.getAlias(selection,testDict)\n",
     "                if regSelected.isControlled() != self.name:\n",
     "                    print('you do not control the selected country')\n",
     "                elif regSelected.howManyTroops() == 0:\n",
@@ -298,11 +298,11 @@
     "    \n",
     "    def target(self):\n",
     "        # list just for testing! DELETE IT ON THE FINAL CODE! the list must be created on Risk class\n",
-    "        testList = [NorthAfrica,CentralAmerica,NorthAmerica]\n",
+    "        testDict = {\"NAf\": NorthAfrica, \"CA\": CentralAmerica,\"NA\":NorthAmerica}\n",
     "        while True:\n",
     "            selection = input('select a country(by alias) to attack')\n",
-    "            if Regions.getAlias(selection,testList) != False:\n",
-    "                regSelected = Regions.getAlias(selection,testList)\n",
+    "            if Regions.getAlias(selection,testDict) != False:\n",
+    "                regSelected = Regions.getAlias(selection,testDict)\n",
     "                if Regions.adjacent(self.currentSel.location, regSelected) == False:\n",
     "                    print('country out of reach (not adjacent)')\n",
     "                elif regSelected.isControlled() == self.name:\n",
@@ -311,14 +311,47 @@
     "                    self.currentTar = regSelected\n",
     "                    print(f'your next attack will target {self.currentTar.name}')\n",
     "                    break\n",
+    "    \n",
+    "    def attack(self):\n",
+    "        #rd.randint(1,6)\n",
+    "        base_attack = self.currentSel.power\n",
+    "        base_defense = self.currentTar.troopsRegion\n",
+    "        \n",
+    "        input = 'you try to attack! (press Enter to continue)'\n",
+    "        input = 'you roll a dice! (press Enter to continue)'\n",
+    "        current_roll = rd.randint(1,6)\n",
+    "        input = f'you rolled a {current_roll} (press Enter to continue)'\n",
+    "        final_attack = current_roll + base_attack\n",
+    "        print(f'Your total attack is {base_attack + current_roll} \\n')\n",
+    "        \n",
+    "        input = \"now it's time for the opponent to defend..(press Enter to continue)\"\n",
+    "        input = \"opponent rolls a dice.. (press Enter to continue)\"\n",
+    "        current_roll = rd.randint(1,6)\n",
+    "        input = f' opponent rolled a {current_roll} (press Enter to continue)'\n",
+    "        final_defense = base_defense + current_roll\n",
+    "        print(f'opponent total defense is {base_defense + current_roll} \\n')\n",
+    "        \n",
+    "        if total_defense >= total_attack:\n",
+    "            print('the opponent resists the attack..')\n",
+    "        else:\n",
+    "            print(f'you win! you conquered {self.currentTar.name}')\n",
+    "        \n",
+    "        \n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
     "                \n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
-   "id": "e7caca00",
+   "execution_count": 297,
+   "id": "629e21ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,8 +360,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
-   "id": "6f58912b",
+   "execution_count": 298,
+   "id": "390bd1f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,8 +372,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
-   "id": "41a93fa1",
+   "execution_count": 299,
+   "id": "86945750",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,8 +384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
-   "id": "064f1618",
+   "execution_count": 300,
+   "id": "84677fa5",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +394,7 @@
        "'Gerard'"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,8 +405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
-   "id": "ae6fd065",
+   "execution_count": 301,
+   "id": "fb05da06",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +415,7 @@
        "2"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,8 +426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
-   "id": "df2149ac",
+   "execution_count": 302,
+   "id": "14d094a0",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +436,7 @@
        "'Gerard'"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,8 +447,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
-   "id": "65d18f72",
+   "execution_count": 306,
+   "id": "662b5a10",
    "metadata": {},
    "outputs": [
     {
@@ -433,15 +466,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
-   "id": "9a40ce7d",
+   "execution_count": 307,
+   "id": "2a6cc619",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "select a country(by alias) to attackNAf\n",
+      "select a country(by alias) to attackCA\n",
       "country out of reach (not adjacent)\n",
       "select a country(by alias) to attackNA\n",
       "your next attack will target NorthAmerica\n"
@@ -454,8 +487,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
-   "id": "bd3306c1",
+   "execution_count": 308,
+   "id": "bd721483",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +497,7 @@
        "'NorthAmerica'"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b477945",
+   "id": "168bc59b",
    "metadata": {},
    "outputs": [],
    "source": []
