--- a/Fake_Risk_v1.ipynb
+++ b/Fake_Risk_v1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a306a4d4",
+   "id": "c2e044a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "814a176b",
+   "id": "f8a15dba",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8be9c974",
+   "id": "4236807f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "9b5eee93",
+   "id": "4f26d3dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "c511c0d7",
+   "id": "d107163c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "059cf68c",
+   "id": "b1666b02",
    "metadata": {},
    "outputs": [
     {
@@ -157,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
-   "id": "f936c80e",
+   "execution_count": 309,
+   "id": "2e8a5a62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,8 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
-   "id": "5b860f04",
+   "execution_count": 310,
+   "id": "7671fc99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,8 +231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
-   "id": "17ad046b",
+   "execution_count": 311,
+   "id": "ada6c22e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,8 +243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
-   "id": "2db0f6f9",
+   "execution_count": 312,
+   "id": "da8dcdb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,8 +267,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
-   "id": "1feaa762",
+   "execution_count": 342,
+   "id": "e299925e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,9 @@
     "                    break\n",
     "    \n",
     "    def attack(self):\n",
-    "        #rd.randint(1,6)\n",
+    "        '''resolves the attack with random rolls of dice. Updates the control of countries if needed'''\n",
+    "        # list just for testing! DELETE IT ON THE FINAL CODE! the list must be created on Risk class\n",
+    "        testDict = {\"NAf\": NorthAfrica, \"CA\": CentralAmerica,\"NA\":NorthAmerica}\n",
     "        base_attack = self.currentSel.power\n",
     "        base_defense = self.currentTar.troopsRegion\n",
     "        \n",
@@ -331,17 +333,14 @@
     "        final_defense = base_defense + current_roll\n",
     "        print(f'opponent total defense is {base_defense + current_roll} \\n')\n",
     "        \n",
-    "        if total_defense >= total_attack:\n",
+    "        if final_defense >= final_attack:\n",
     "            print('the opponent resists the attack..')\n",
     "        else:\n",
     "            print(f'you win! you conquered {self.currentTar.name}')\n",
-    "        \n",
-    "        \n",
+    "            testDict[self.currentTar.alias].controlled_by = self.name\n",
+    "            testDict[self.currentTar.alias].troopsRegion = 1\n",
     "            \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "    \n",
     "        \n",
     "        \n",
     "                \n",
@@ -350,8 +349,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
-   "id": "629e21ff",
+   "execution_count": 343,
+   "id": "82bae521",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,8 +359,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
-   "id": "390bd1f5",
+   "execution_count": 344,
+   "id": "249814da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,8 +371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
-   "id": "86945750",
+   "execution_count": 345,
+   "id": "59eb8339",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,8 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
-   "id": "84677fa5",
+   "execution_count": 346,
+   "id": "646e8fe8",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +393,7 @@
        "'Gerard'"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,8 +404,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
-   "id": "fb05da06",
+   "execution_count": 347,
+   "id": "1781c15c",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +414,7 @@
        "2"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,8 +425,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
-   "id": "14d094a0",
+   "execution_count": 348,
+   "id": "f096fc23",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +435,7 @@
        "'Gerard'"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 348,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
-   "id": "662b5a10",
+   "execution_count": 349,
+   "id": "34edc3e9",
    "metadata": {},
    "outputs": [
     {
@@ -466,16 +465,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
-   "id": "2a6cc619",
+   "execution_count": 350,
+   "id": "b39140fa",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "select a country(by alias) to attackCA\n",
-      "country out of reach (not adjacent)\n",
       "select a country(by alias) to attackNA\n",
       "your next attack will target NorthAmerica\n"
      ]
@@ -487,8 +484,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
-   "id": "bd721483",
+   "execution_count": 351,
+   "id": "d79f4a97",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +494,7 @@
        "'NorthAmerica'"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,8 +505,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 352,
+   "id": "b7660055",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your total attack is 6 \n",
+      "\n",
+      "opponent total defense is 6 \n",
+      "\n",
+      "the opponent resists the attack..\n"
+     ]
+    }
+   ],
+   "source": [
+    "HumanPlayer.attack()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "168bc59b",
+   "id": "109aa4f2",
    "metadata": {},
    "outputs": [],
    "source": []
