--- a/Fake_Risk_v1.ipynb
+++ b/Fake_Risk_v1.ipynb
@@ -204,14 +204,19 @@
     "    def __init__(self,power,owner, location=None):\n",
     "        self.power = power\n",
     "        self.owner = owner\n",
-    "        self.location = location    \n",
+    "        self.location = location\n",
+    "    \n",
+    "    def unit():\n",
+    "        pass\n",
+    "    \n",
+    "\n",
     "              \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "0021b7c8",
    "metadata": {},
    "outputs": [],
@@ -228,6 +233,8 @@
     "   \n",
     "        while True:\n",
     "            selection = input('select a country(by alias) where your troops are stationed')\n",
+    "            if selection.upper() == 'EXIT':\n",
+    "                !quit()\n",
     "            if Regions.getAlias(selection,world) != False:\n",
     "                regSelected = Regions.getAlias(selection,world)\n",
     "                if regSelected.isControlled() != self.name:\n",
@@ -259,8 +266,6 @@
     "    def attack(self,world):\n",
     "        '''resolves the attack with random rolls of dice. Updates the control of countries if needed'''\n",
     "        if self.currentSel.power != 0:\n",
-    "                # list just for testing! DELETE IT ON THE FINAL CODE! the list must be created on Risk class\n",
-    "            #testDict = {\"NAf\": NorthAfrica, \"CA\": CentralAmerica,\"NA\":NorthAmerica}\n",
     "            base_attack = self.currentSel.power\n",
     "            base_defense = self.currentTar.troopsRegion\n",
     "\n",
@@ -295,18 +300,17 @@
     "            selection = input('select a country to gather troops from')\n",
     "            if Regions.getAlias(selection,world) != False:\n",
     "                regSelected = Regions.getAlias(selection,world)\n",
-    "            else:\n",
-    "                print('Non existant alias')\n",
-    "            if regSelected.isControlled() == self.name:\n",
-    "                #regSelected.troopsRegion += 1\n",
-    "                world[regSelected.alias].troopsRegion +=1\n",
-    "                print(f'{self.name} recruited 1 troop on {regSelected.name}\\n ')\n",
-    "                break\n",
-    "            else:\n",
-    "                print('you cannot recruit on regions you dont control')\n",
+    "                if regSelected.isControlled() == self.name:\n",
+    "                    #regSelected.troopsRegion += 1\n",
+    "                    world[regSelected.alias].troopsRegion +=1\n",
+    "                    print(f'{self.name} recruited 1 troop on {regSelected.name}\\n ')\n",
+    "                    break\n",
+    "                else:\n",
+    "                    print('you cannot recruit on regions you dont control')\n",
     "                \n",
-    "        \n",
-    "    \n",
+    "            \n",
+    "            \n",
+    "            \n",
     "    def resetPlay(self):\n",
     "        '''sets to 0 both select and target'''\n",
     "        self.currentTar = 0\n",
@@ -316,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "id": "8bf58646",
    "metadata": {},
    "outputs": [],
@@ -446,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "id": "a5059549",
    "metadata": {},
    "outputs": [
@@ -501,8 +505,8 @@
       "\n",
       "@At the end of 10 rounds, the player who controls more countries is the winner\n",
       "\n",
-      "Player 1, Choose your nameOni\n",
-      "Player 2, Choose your nameOni\n",
+      "Player 1, Choose your namefe\n",
+      "Player 2, Choose your namefu\n",
       "CURRENT ROUND IS 1 \n",
       "\n",
       "CURRENT STATUS OF THE WORLD: \n",
@@ -511,7 +515,7 @@
       "with a total of 0 troops \n",
       "\n",
       "\n",
-      "the country CentralAmerica is controlled by Oni\n",
+      "the country CentralAmerica is controlled by fe\n",
       "with a total of 2 troops \n",
       "\n",
       "\n",
@@ -527,11 +531,11 @@
       "with a total of 0 troops \n",
       "\n",
       "\n",
-      "the country WesternEurope is controlled by Oni\n",
+      "the country WesternEurope is controlled by fe\n",
       "with a total of 2 troops \n",
       "\n",
       "\n",
-      "the country EasternEurope is controlled by Oni2\n",
+      "the country EasternEurope is controlled by fu\n",
       "with a total of 3 troops \n",
       "\n",
       "\n",
@@ -543,7 +547,7 @@
       "with a total of 0 troops \n",
       "\n",
       "\n",
-      "the country Oceania is controlled by Oni2\n",
+      "the country Oceania is controlled by fu\n",
       "with a total of 2 troops \n",
       "\n",
       "\n",
@@ -572,6 +576,20 @@
       "\n",
       "        \n",
       "player 2 always recruits first!\n",
+      "\n",
+      "select a country to gather troops fromsdafd\n",
+      "Non existant alias\n",
+      "select a country to gather troops fromO\n",
+      "fu recruited 1 troop on Oceania\n",
+      " \n",
+      "time for player 1 to recruit\n",
+      "\n",
+      "select a country to gather troops fromO\n",
+      "you cannot recruit on regions you dont control\n",
+      "select a country to gather troops fromWE\n",
+      "fe recruited 1 troop on WesternEurope\n",
+      " \n",
+      "PLAYER 1 TURN: \n",
       "\n"
      ]
     },
@@ -583,8 +601,8 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
       "\u001b[0;32m/var/folders/34/shcpc0k13hndsp05mm2j01th0000gn/T/ipykernel_3636/451043146.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/34/shcpc0k13hndsp05mm2j01th0000gn/T/ipykernel_3636/1549278274.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     86\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewGame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistAlias\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'player 2 always recruits first!\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m         \u001b[0mplayer2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecruit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewGame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time for player 1 to recruit\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m         \u001b[0mplayer1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecruit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewGame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/34/shcpc0k13hndsp05mm2j01th0000gn/T/ipykernel_3636/4063790007.py\u001b[0m in \u001b[0;36mrecruit\u001b[0;34m(self, world)\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0;34m'''recruits 1 troop in one of the player controled regions'''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 77\u001b[0;31m             \u001b[0mselection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'select a country to gather troops from'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     78\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mRegions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetAlias\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mselection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m                 \u001b[0mregSelected\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRegions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetAlias\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mselection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/34/shcpc0k13hndsp05mm2j01th0000gn/T/ipykernel_3636/1549278274.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     92\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 94\u001b[0;31m             \u001b[0mplayer1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewGame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     95\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mplayer1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewGame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/34/shcpc0k13hndsp05mm2j01th0000gn/T/ipykernel_3636/687245104.py\u001b[0m in \u001b[0;36mselect\u001b[0;34m(self, world)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m             \u001b[0mselection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'select a country(by alias) where your troops are stationed'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mselection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'EXIT'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m                 \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'quit()'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/Cellar/jupyterlab/3.1.10/libexec/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1004\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1005\u001b[0m             )\n\u001b[0;32m-> 1006\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1007\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1008\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/Cellar/jupyterlab/3.1.10/libexec/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1049\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1050\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1051\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1052\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1053\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
@@ -597,16 +615,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f95e63e4",
+   "execution_count": 27,
+   "id": "36b356f1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/opt/python@3.8/bin/python3\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!which python3"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f0e1f85",
+   "id": "9c1110d7",
    "metadata": {},
    "outputs": [],
    "source": []
