added exit functionality, to quit the game during recruit/selection/target phases

--- a/Fake_Risk_v1.ipynb
+++ b/Fake_Risk_v1.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "0021b7c8",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,8 @@
     "        while True:\n",
     "            selection = input('select a country(by alias) where your troops are stationed')\n",
     "            if selection.upper() == 'EXIT':\n",
-    "                !quit()\n",
+    "                print('\\n Bye! See you at the next War.. \\n')\n",
+    "                quit()\n",
     "            if Regions.getAlias(selection,world) != False:\n",
     "                regSelected = Regions.getAlias(selection,world)\n",
     "                if regSelected.isControlled() != self.name:\n",
@@ -250,6 +251,9 @@
     "        '''checks if a country is a valid target for an attack'''\n",
     "        while True:\n",
     "            selection = input('select a country(by alias) to attack.\\n Write \"selection\" to go back to region selection')\n",
+    "            if selection.upper() == 'EXIT':\n",
+    "                print('\\n Bye! See you at the next War.. \\n')\n",
+    "                quit()\n",
     "            if selection == 'selection':\n",
     "                return False\n",
     "            if Regions.getAlias(selection,world) != False:\n",
@@ -298,6 +302,9 @@
     "        '''recruits 1 troop in one of the player controled regions'''\n",
     "        while True:\n",
     "            selection = input('select a country to gather troops from')\n",
+    "            if selection.upper() == 'EXIT':\n",
+    "                print('\\n Bye! See you at the next War.. \\n')\n",
+    "                quit()\n",
     "            if Regions.getAlias(selection,world) != False:\n",
     "                regSelected = Regions.getAlias(selection,world)\n",
     "                if regSelected.isControlled() == self.name:\n",
@@ -320,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "8bf58646",
    "metadata": {},
    "outputs": [],
@@ -450,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "a5059549",
    "metadata": {},
    "outputs": [
@@ -505,8 +512,8 @@
       "\n",
       "@At the end of 10 rounds, the player who controls more countries is the winner\n",
       "\n",
-      "Player 1, Choose your namefe\n",
-      "Player 2, Choose your namefu\n",
+      "Player 1, Choose your nameGer\n",
+      "Player 2, Choose your nameNe\n",
       "CURRENT ROUND IS 1 \n",
       "\n",
       "CURRENT STATUS OF THE WORLD: \n",
@@ -515,7 +522,7 @@
       "with a total of 0 troops \n",
       "\n",
       "\n",
-      "the country CentralAmerica is controlled by fe\n",
+      "the country CentralAmerica is controlled by Ger\n",
       "with a total of 2 troops \n",
       "\n",
       "\n",
@@ -531,11 +538,11 @@
       "with a total of 0 troops \n",
       "\n",
       "\n",
-      "the country WesternEurope is controlled by fe\n",
+      "the country WesternEurope is controlled by Ger\n",
       "with a total of 2 troops \n",
       "\n",
       "\n",
-      "the country EasternEurope is controlled by fu\n",
+      "the country EasternEurope is controlled by Ne\n",
       "with a total of 3 troops \n",
       "\n",
       "\n",
@@ -547,7 +554,7 @@
       "with a total of 0 troops \n",
       "\n",
       "\n",
-      "the country Oceania is controlled by fu\n",
+      "the country Oceania is controlled by Ne\n",
       "with a total of 2 troops \n",
       "\n",
       "\n",
@@ -577,20 +584,11 @@
       "        \n",
       "player 2 always recruits first!\n",
       "\n",
-      "select a country to gather troops fromsdafd\n",
-      "Non existant alias\n",
-      "select a country to gather troops fromO\n",
-      "fu recruited 1 troop on Oceania\n",
-      " \n",
-      "time for player 1 to recruit\n",
+      "select a country to gather troops fromexit\n",
       "\n",
-      "select a country to gather troops fromO\n",
-      "you cannot recruit on regions you dont control\n",
-      "select a country to gather troops fromWE\n",
-      "fe recruited 1 troop on WesternEurope\n",
-      " \n",
-      "PLAYER 1 TURN: \n",
-      "\n"
+      " Bye! See you at the next War.. \n",
+      "\n",
+      "Non existant alias\n"
      ]
     },
     {
@@ -601,8 +599,8 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
       "\u001b[0;32m/var/folders/34/shcpc0k13hndsp05mm2j01th0000gn/T/ipykernel_3636/451043146.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/34/shcpc0k13hndsp05mm2j01th0000gn/T/ipykernel_3636/1549278274.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     92\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 94\u001b[0;31m             \u001b[0mplayer1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewGame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     95\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mplayer1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewGame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/34/shcpc0k13hndsp05mm2j01th0000gn/T/ipykernel_3636/687245104.py\u001b[0m in \u001b[0;36mselect\u001b[0;34m(self, world)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m             \u001b[0mselection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'select a country(by alias) where your troops are stationed'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mselection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'EXIT'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m                 \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'quit()'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/34/shcpc0k13hndsp05mm2j01th0000gn/T/ipykernel_3636/1549278274.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     86\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewGame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistAlias\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'player 2 always recruits first!\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m         \u001b[0mplayer2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecruit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewGame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time for player 1 to recruit\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m         \u001b[0mplayer1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecruit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewGame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/34/shcpc0k13hndsp05mm2j01th0000gn/T/ipykernel_3636/2101347551.py\u001b[0m in \u001b[0;36mrecruit\u001b[0;34m(self, world)\u001b[0m\n\u001b[1;32m     79\u001b[0m         \u001b[0;34m'''recruits 1 troop in one of the player controled regions'''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m             \u001b[0mselection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'select a country to gather troops from'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mselection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'EXIT'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n Bye! See you at the next War.. \\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/Cellar/jupyterlab/3.1.10/libexec/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1004\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1005\u001b[0m             )\n\u001b[0;32m-> 1006\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1007\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1008\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/Cellar/jupyterlab/3.1.10/libexec/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1049\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1050\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1051\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1052\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1053\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
@@ -616,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "36b356f1",
+   "id": "fc5efd98",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c1110d7",
+   "id": "718bdfea",
    "metadata": {},
    "outputs": [],
    "source": []
