modified string on IA recruit method

--- a/Fake_Risk_v1.ipynb
+++ b/Fake_Risk_v1.ipynb
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "id": "bbe9ab2b",
    "metadata": {},
    "outputs": [],
@@ -824,7 +824,7 @@
     "                regSelected = Regions.getAlias(selection,world)\n",
     "                if regSelected.isControlled() == self.name:\n",
     "                    world[regSelected.alias].troopsRegion +=2\n",
-    "                    print(f'{self.name} recruited 1 troop on {regSelected.name}\\n ')\n",
+    "                    print(f'{self.name} recruited 2 troops on {regSelected.name}\\n ')\n",
     "                    break\n",
     "                else:\n",
     "                    print('Thinking...\\n')\n",
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c419ecd1",
+   "id": "bc37c579",
    "metadata": {},
    "outputs": [],
    "source": []
